fix: layout issues on mobile and small screens

--- a/packages/ignition/src/app/globals.css
+++ b/packages/ignition/src/app/globals.css
@@ -16,19 +16,13 @@
 
 html,
 body {
-  overflow-x: hidden;
   width: 100%;
   max-width: 100%;
+  background-color: theme("colors.white");
 }
 
-html {
-  height: -webkit-fill-available;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    background-color: theme("colors.slate.900");
-  }
+html:has(.theme-selector.dark) {
+  background-color: theme("colors.slate.900");
 }
 
 * {
@@ -76,6 +70,10 @@ html {
 }
 
 @layer componenets {
+  article {
+    min-height: calc(100dvh - theme(height.48));
+  }
+
   .modal-context {
     opacity: 0;
   }
@@ -94,10 +92,6 @@ html {
     margin-left: 0.4em;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23777'><path d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/></svg>");
     cursor: pointer;
-  }
-
-  .content-area {
-    height: 100%;
   }
 
   .no-wrap > * {
@@ -122,9 +116,13 @@ html {
     content: "`";
   }
 
+  .dark p strong {
+    color: theme("colors.slate.300");
+  }
+
   @media (max-width: 1024px) {
     .icon-info-area {
-      height: calc(100vh - theme(height.20));
+      height: calc(100dvh);
     }
   }
 
